Add a new mechanism for running tests for specific source files
Change-Id: I8bdea0d095a1d476fd2d1932fa4d83f6b2c55eab

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,15 +1,5 @@
 # Build rules
 
-MAKEFLAGS = --jobs=3
-# don't want to overdue it with vms running in parallel
-
 export VERBOSE=1
-bin_SCRIPTS=ktest
-check_SCRIPTS=runtest 
-
-TESTS = $(check_SCRIPTS) \
-	tests/bcache/bcache.ktest
-# note: test scripts must end with .ktest to get called correctly
-
-TEST_EXTENSIONS=.ktest
-KTEST_LOG_COMPILER=$(srcdir)/ktest.testrunner
+bin_SCRIPTS=ktest testy
+TESTS=tests/ktest
