kmo-batch: Add a sysv init script
Change-Id: Ibd65b40a2c16fbe0f3fdef335211170c34cfc6ba

--- a/kmo-batch/Makefile
+++ b/kmo-batch/Makefile
@@ -1,4 +1,6 @@
 
+PREFIX=/usr
+INSTALL=install
 CXXFLAGS+=-O2 -Wall -Werror -g -std=c++11
 CPPFLAGS := -D_FILE_OFFSET_BITS=64
 
@@ -11,6 +13,11 @@ kmo-batch: kmo-batch.o
 
 $(CXX_BINS): %:
 	$(CXX) $(LDFLAGS) $^ $(LDLIBS) -o $@
+
+install: kmo-batch
+	$(INSTALL) -m 0755	kmo-batch	$(DESTDIR)${PREFIX}/bin/
+	$(INSTALL) -m 00755 -T	rc.kmo-batch	$(DESTDIR)/etc/init.d/kmo-batch
+	update-rc.d kmo-batch defaults
 
 .PHONY: clean
 clean:
