--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
 
-dist_bin_SCRIPTS=vm-start vm-start-new
+dist_bin_SCRIPTS=vm-start vm-start-new testy
 
 include ../../../../../../../../../../usr/share/DateraContainer/Makefile.rpm
