--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "tests/xfstests"]
 	path = tests/xfstests
 	url = http://evilpiepirate.org/git/xfstests.git
+[submodule "tests/bcachefs/linuxquota-code"]
+	path = tests/bcachefs/linuxquota-code
+	url = http://evilpiepirate.org/git/linuxquota.git
