gitmodules: update debootstrap git repo
Debian's anonscm is replaced by a GitLab instance at salsa.debian.org.

Silences the following warning:
warning: redirecting to https://salsa.debian.org/installer-team/debootstrap.git/

Signed-off-by: Stijn Tintel <stijn@linux-ipv6.be>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "debootstrap"]
 	path = debootstrap
-	url = https://anonscm.debian.org/git/d-i/debootstrap.git
+	url = https://salsa.debian.org/installer-team/debootstrap.git/
 [submodule "tests/bcachefs/bcachefs-tools"]
 	path = tests/bcachefs/bcachefs-tools
 	url = https://evilpiepirate.org/git/bcachefs-tools.git
