make bcache tests run
Signed-off-by: Linggang Zeng <linggang.zeng@easystack.cn>
Reviewed-by: Kent Overstreet <kent.overstreet@gmail.com>

--- a/ltp-fsx/Makefile
+++ b/ltp-fsx/Makefile
@@ -1,2 +1,11 @@
+PREFIX=/usr
+INSTALL=install
+
 ltp-fsx:
 	cc -o ltp-fsx ltp-fsx.c
+install: ltp-fsx
+	$(INSTALL) -m0755 ltp-fsx $(DESTDIR)${PREFIX}/bin/
+uninstall:
+	rm -rf $(DESTDIR)${PREFIX}/bin/ltp-fsx
+clean:
+	rm -rf ltp-fsx
