Switch to toml for ci config file
Signed-off-by: Kent Overstreet <kent.overstreet@linux.dev>

--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -14,7 +14,9 @@ path = "src/get-test-job.rs"
 cgi = "0.6"
 git2 = "0.14"
 querystring = "1.1.0"
-dirs = "4.0.0"
 multimap = "0.8.3"
 die = "0.2.0"
 libc = "0.2"
+toml = "0.5.9"
+serde = "1.0.145"
+serde_derive = "1.0.145"
