--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -2,6 +2,7 @@
 name = "ci_cgi"
 version = "0.1.0"
 edition = "2021"
+build = "src/build.rs"
 
 #[workspace]
 #members = ["get-test-job", "ci-cgi"]
@@ -21,3 +22,7 @@ memoize = "0.3.1"
 glob = "0.3.0"
 clap = { version = "4.0.32", features = ["derive"] }
 file-lock = "2.1.6"
+capnp = "0.17.0"
+
+[build-dependencies]
+capnpc = "*"
