get-test-job: Update lockfile mtime
This fixes ratelimiting of fetching git remotes - we need to actually
write to the lockfile to update its mtime.

Signed-off-by: Kent Overstreet <kent.overstreet@linux.dev>

--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -23,6 +23,7 @@ glob = "0.3.0"
 clap = { version = "4.0.32", features = ["derive"] }
 file-lock = "2.1.6"
 capnp = "0.17.0"
+anyhow = "1.0.71"
 
 [build-dependencies]
 capnpc = "*"
