--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -24,6 +24,7 @@ clap = { version = "4.0.32", features = ["derive"] }
 file-lock = "2.1.6"
 capnp = "0.17.0"
 anyhow = "1.0.71"
+chrono = "0.4.26"
 
 [build-dependencies]
 capnpc = "*"
