--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -22,9 +22,9 @@ memoize = "0.3.1"
 glob = "0.3.0"
 clap = { version = "4.0.32", features = ["derive"] }
 file-lock = "2.1.6"
-capnp = "0.17.0"
+capnp = "0.19.*"
 anyhow = "1.0.71"
 chrono = "0.4.26"
 
 [build-dependencies]
-capnpc = "*"
+capnpc = "0.19.*"
