--- a/ci-web/Cargo.toml
+++ b/ci-web/Cargo.toml
@@ -25,6 +25,7 @@ file-lock = "2.1.6"
 capnp = "0.19.*"
 anyhow = "1.0.71"
 chrono = "0.4.26"
+memmap = "0.7.0"
 
 [build-dependencies]
 capnpc = "0.19.*"
