ci-status: add logs subcommand for fetching test logs
ci-status logs COMMIT           — lists failed tests
ci-status logs COMMIT TEST      — fetches and displays test log
ci-status logs COMMIT TEST -f   — fetches full log

Reads brotli-compressed logs from local output_dir or fetches them
from the CI web server. Substring matching on test names, with
disambiguation when multiple tests match.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ chrono = "0.4.26"
 memmap = "0.7.0"
 serde_json = "1.0.132"
 reqwest = { version = "0.12.9", features = ["blocking"] }
+brotli = "7"
 
 [build-dependencies]
 capnpc = "0.21.*"
